compiler/test/parse-err/select-func-non-scalar-args.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{parameter 0 has type '!graphalg.mat<distinct[0]<> x distinct[0]<> x i64>'}}
func nonScalarFunc(m: Matrix<s, s, int>) -> bool {
    return bool(true);
}

func SelectFuncNonScalarArgs(m: Matrix<s, s, int>) -> Matrix<s, s, int> {
    // select() requires the function to have scalar arguments
    // expected-error@below{{select() requires function parameters to be scalars}}
    return select(nonScalarFunc, m);
}
